test/input2.c
int ab + bb * cb
aa < bb
dd >= cc
"literal"
a ? b
10.1.2abs.
"abc
a" // error
"abc\
a"
a->field
// todo
&a
""
//
/*
after error
\"
"unfinished string literal in the end

